Dark theme, (incomplete) navbar attempt

--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RTech's Pages</title>
-</head>
-<body>
-    <h1>
-        Third website attempt :/
-    </h1>
 
-    <p>
-        Jekyll decided to screw up updates so atp why not make it all from scratch
-    </p>
+    <link rel="stylesheet" href="common/reset.css">
+    <link rel="stylesheet" href="common/style.css">
+</head>
+
+<body>
+    <link rel="stylesheet" href="/common/topbar.css">
+
+    <nav class="topbar">
+        <div class="logo">
+            <img src="assets/logo.png" alt="logo not logoing :c">
+            RTech's Pages
+        </div>
+
+        <div class="hamburger">
+            <div class="hambar" />
+            <div class="hambar" />
+            <div class="hambar" />
+        </div>
+
+        <ul class="nav-stuff">
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#posts">Posts</a></li>
+            <li><a href="#about-me">About Me</a></li>
+        </ul>
+    </nav>
+
+    <div class="content">
+        <h1>
+            Third website attempt :/
+        </h1>
+
+        <p>
+            Jekyll decided to screw up updates so atp why not make it all from scratch
+        </p>
+    </div>
+
 </body>
+
 </html>
