Some kind of CSS + UNDER CONSTRUCTION gif

--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 <body>
     <div id="header">
         <h1>RTPages v5</h1>
+        <div id="section_links">
+            <a href="#" class="section">Projects</a>
+            <a href="#" class="section">About me</a>
+        </div>
     </div>
 
     <div id="content">
-        <p>We're doing it for real now 🔥🔥🔥</p>
-        <img src="https://blob.gifcities.org/gifcities/2YY7LTIXBS72UMV2YXIBJW3ZMNI63LI3.gif" alt="GIF">
+        <h2>What is this???</h2>
+        <p>Finally, a nice website, the way I WANT IT.</p>
+        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
+        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
+        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
+        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
     </div>
 
 </body>
