--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 <body>
     <div id="header">
         <h1>RTPages v5</h1>
+    </div>
+
+    <div id="contents">
         <div id="section_links">
-            <a href="#" class="section">Projects</a>
-            <a href="#" class="section">About me</a>
+            <span href="/home.html" class="section" target="content">Home</span>
+            <span href="/projects/" class="section" target="content">Projects</span>
+            <span href="/about/" class="section" target="content">About me</span>
+        </div>
+
+        <div id="content" name="content">
         </div>
     </div>
 
-    <div id="content">
-        <h2>What is this???</h2>
-        <p>Finally, a nice website, the way I WANT IT.</p>
-        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
-        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
-        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
-        <img src="https://blob.gifcities.org/gifcities/6Q3RUN6QT3ZY75WFF6MB36RJQF63VO62.gif" alt="GIF">
-    </div>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
